<resources>
    <string name="app_name">FavMovies</string>

    <!-- Mensajes Estados app -->
    <string name="OnCreate">onCreate: Me estoy creando</string>
    <string name="OnStart">onStart: Voy a ser mostrada al usuario"</string>
    <string name="OnResume">onResume: Interactuando con el usuario</string>
    <string name="OnPause">onPause: Voy a estar en segundo plano</string>
    <string name="OnRestart">onRestart: Vuelvo de nuevo</string>
    <string name="OnDestroy">onDestroy: Me muero.....</string>
    <string name="OnStop">onStop: Dejo de estar visible </string>

    <!-- Mostrar información pelicula -->
    <string name="titulo">Título</string>
    <string name="tituloEdit">Título de la película</string>
    <string name="argumento">Argumento</string>
    <string name="sinopsis">Sinopsis de la película</string>
    <string name="categoria">Categoría</string>
    <string name="duracion">Duración</string>
    <string name="duracionTexto">Duración</string>
    <string name="fecha">Fecha de la película</string>
    <string name="guardar">GUARDAR</string>

    <!-- Mensajes acciones -->
    <string name="msg_guardado">Elemento guardado</string>
    <string name="msg_crear_nueva_categoria">Creación de una nueva categoría</string>
    <string name="msg_modif_categoria">Modificación de la categoría</string>
    <string name="msg_accion_cancelada">Acción cancelada</string>
    <string name="msg_accion_ok">Acción realizada</string>

    <!-- Creación/Modifiación de categoría -->
    <string name="nombreNuevaCategoria">Nombre de la categoría</string>
    <string name="descripcionCategoria">Descripción Categoría</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Linea_recycler_view_pelicula -->
    <string name="pelicula">Tenet</string>
    <string name="titulopeli">Tenet</string>
    <string name="fechaestreno">27/7/2020</string>

    <!-- Menu -->
    <string name="Compartir">Compartir</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_compartir">Compartir</string>
    <string name="subject_compartir">Te comparto la siguiente peli:</string>

    <!-- Conexión -->
    <string name="comprueba_conexion">No se ha establecido la conexión. Por favor, conecta tu movil a Internet y vuelva a intentarlo.</string>
    <string name="error_conexion">No se ha establecido la conexión. Por favor, conecta tu movil a Internet y vuelva a intentarlo.</string>

    <!-- Hints -->
    <string name="hint_titulo_nota">Título de la película</string>
    <string name="hint_contenido_nota">Sinopsis de la pelicula</string>
    <string name="hint_duracion">Duracion</string>
    <string name="hint_fecha">Fecha de la película</string>

    <string name="title_activity_show_movie">ScrollingActivity</string>

    <string name="desc_imagen_fondo">Imagen de fondo pelicula</string>
    <string name="desc_caratula">Carátula de la película</string>

    <string name="Ajustes">Ajustes</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="elije_categoria">Elije la categoría</string>
    <string name="title_info">INFORMACIÓN</string>
    <string name="title_Actores">ACTORES</string>
    <string name="title_argumento">ARGUMENTO</string>
    <string name="categoria_titulo">Elije la categoría</string>
    <string name="imagen_actor">Imagen del actor en cuestión</string>
    <string name="nombre_actor">Nombre del actor</string>
    <string name="nombre_personaje">Nombre del personaje del actor</string>
    <string name="msg_prox_mas_info">Próximamente se mostrará más información</string>


    <string name="menu_fav">Favoritas</string>
    <string name="menu_popular">Populares</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_borrar_fav">Borrar favoritas</string>
    <string name="title_activity_main_principal">MainPrincipalActivity</string>
    <string name="menu_item_favorito">Favorito</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>