<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.uniovi.eii.sdm.ui.home.HomeFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.uniovi.eii.sdm.ui.favmovies.FavFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.uniovi.eii.sdm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>