<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp"
    app:flow_verticalAlign="baseline">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulopeli"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/titulopeli"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/fechaestreno"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/fechaestreno"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>